--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-.idea/*
+.idea
 # CMake
 cmake-build-*/
 
@@ -44,8 +43,8 @@ fabric.properties
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 # *.iml
-# modules.xml
-# .idea/misc.xml
+#modules.xml
+#.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
