--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
+
+DB2-project-2021-backend.iml
