--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+target
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij
 
