--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ hs_err_pid*
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
 
 DB2-project-2021-backend.iml
+
+src/main/resources/META-INF/tomee.xml
