--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.polimi.DB2-5</groupId>
-    <artifactId>DB2-project-2021-backend</artifactId>
+    <artifactId>PoliComShop</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
-            <version>3.0.11.RELEASE</version>
+            <version>3.0.12.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
