--- a/EJB/pom.xml
+++ b/EJB/pom.xml
@@ -26,6 +26,7 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
             <version>8.0.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
