--- a/WEB/src/it.polimi.DB2/webapp/WEB-INF/web.xml
+++ b/WEB/src/it.polimi.DB2/webapp/WEB-INF/web.xml
@@ -3,4 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <filter>
+        <filter-name>LoggedIn</filter-name>
+        <filter-class>filters.LoggedIn</filter-class>
+    </filter>
+    <filter>
+        <filter-name>ValidBuyProcess</filter-name>
+        <filter-class>filters.ValidBuyProcess</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoggedIn</filter-name>
+        <url-pattern>/Payment</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>ValidBuyProcess</filter-name>
+        <url-pattern>/ReviewOrder</url-pattern>
+    </filter-mapping>
 </web-app>
