--- a/CustomerWeb/pom.xml
+++ b/CustomerWeb/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.polimi.DB2</groupId>
-    <artifactId>WEB</artifactId>
+    <artifactId>CustomerWeb</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>CustomerWeb</name>
 
