--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
@@ -11,6 +11,22 @@
         <filter-name>ValidBuyProcess</filter-name>
         <filter-class>filters.ValidBuyProcess</filter-class>
     </filter>
+    <filter>
+        <filter-name>InvalidateBuyProcess</filter-name>
+        <filter-class>filters.InvalidateBuyProcess</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>InvalidateBuyProcess</filter-name>
+        <servlet-name>GetHome</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>InvalidateBuyProcess</filter-name>
+        <servlet-name>Logout</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>InvalidateBuyProcess</filter-name>
+        <servlet-name>SignUp</servlet-name>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>LoggedIn</filter-name>
         <url-pattern>/Payment</url-pattern>
