--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
@@ -4,8 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <filter>
-        <filter-name>LoggedIn</filter-name>
-        <filter-class>filters.LoggedIn</filter-class>
+        <filter-name>LoggedInCheck</filter-name>
+        <filter-class>filters.LoggedInCheck</filter-class>
+    </filter>
+    <filter>
+        <filter-name>NotLoggedInCheck</filter-name>
+        <filter-class>filters.NotLoggedInCheck</filter-class>
     </filter>
     <filter>
         <filter-name>ValidBuyProcess</filter-name>
@@ -28,8 +32,16 @@
         <servlet-name>SignUp</servlet-name>
     </filter-mapping>
     <filter-mapping>
-        <filter-name>LoggedIn</filter-name>
-        <url-pattern>/Payment</url-pattern>
+        <filter-name>LoggedInCheck</filter-name>
+        <servlet-name>Payment</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>NotLoggedInCheck</filter-name>
+        <servlet-name>SignIn</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>NotLoggedInCheck</filter-name>
+        <servlet-name>SignUp</servlet-name>
     </filter-mapping>
     <filter-mapping>
         <filter-name>ValidBuyProcess</filter-name>
