report servlet restored

--- a/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
+++ b/CustomerWeb/src/it.polimi.DB2/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
 
     <filter-mapping>
         <filter-name>InvalidateBuyProcess</filter-name>
+        <url-pattern>/Employee/*</url-pattern>
         <servlet-name>GetHome</servlet-name>
     </filter-mapping>
     <filter-mapping>
